Agent cleanup batch: properties Lombok, records, SOLID splits, coverage push
Main: 7 properties classes -> Lombok @Getter/@Setter; CustomMetadata +
OpenAiPromptCacheStrategy -> records; ChatHistoryCompactionService,
PersistentChatMemory, DocumentRouter, S3PresignedUrlService, ChatExecutor
decomposed; IngestionMetadataKeys shared constants; StartupLogConfig now
reads banner.txt; spring-boot-configuration-processor added so
@ConfigurationProperties resolve in IntelliJ.

Tests: TestConstants + 28 coverage-targeted test files; branch coverage
73.8% -> 97.77%; 672 unit tests green.

Known follow-ups (next commit): test deduplication, several IntelliJ
warnings still outstanding per audit list.